patchbay-gui/tests/ui/layout_engine_state_struct_literal_private.rs
use patchbay_gui::LayoutEngineState;

fn main() {
    let _ = LayoutEngineState {
        measure_cache_hits: 0,
        ..LayoutEngineState::default()
    };
}
